--- a/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
+++ b/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
@@ -27,3 +27,4 @@ velocityDisplay=Velocity
 velocityComponentsDisplay=Velocity components
 zoomSliderLabel=Zoom
 startButton=START
+© 2021 GitHub, Inc.
