--- a/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
+++ b/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
@@ -25,6 +25,6 @@ trajectoryDisplay=Trajectory
 animationDisplay=Animation
 velocityDisplay=Velocity
 velocityComponentsDisplay=Velocity components
-zoomSliderLabel=Zoom
+zoomSliderLabel=Zoom [m * 10^]
 startButton=START
 © 2021 GitHub, Inc.
