--- a/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
+++ b/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
@@ -8,18 +8,18 @@ help=Help
 language=Language
 color=Color
 settings=Setting
-currentVelocity=Current velocity
-currentAngularMomentum=Current angular momentum
-currentKineticEnergy=Current kinetic energy
-currentPotential=Current potential
-currentEffectivePotential=Current effective potential
-currentDistance=Current distance
-currentEnergy=Current energy
-currentReductedMass=Current reducted mass
-centralMassInput=Central mass
-orbitingMassInput=Orbiting mass
-velocityValueInput=Velocity value
-velocityDirectionInput=Velocity direction
+currentVelocity=Current velocity [m/s]
+currentAngularMomentum=Current angular momentum [kg*m^2/s]
+currentKineticEnergy=Current kinetic energy [J]
+currentPotential=Current potential [J]
+currentEffectivePotential=Current effective potential [J]
+currentDistance=Current distance [m]
+currentEnergy=Current energy [J]
+currentReductedMass=Current reducted mass [kg]
+centralMassInput=Central mass [kg]
+orbitingMassInput=Orbiting mass [kg]
+velocityValueInput=Velocity value [m/s]
+velocityDirectionInput=Velocity direction [deg]
 axisDisplay=Axes
 trajectoryDisplay=Trajectory
 animationDisplay=Animation
