--- a/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
+++ b/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
@@ -27,5 +27,5 @@ velocityDisplay=Velocity
 velocityComponentsDisplay=Velocity components
 zoomSliderLabel=Zoom [m * 10^]
 startButton=START
-reset=RESET
+reset=STOP
 © 2021 GitHub, Inc.
