--- a/POProject/bin/BundleLanguages/Bundle_en_US.properties
+++ b/POProject/bin/BundleLanguages/Bundle_en_US.properties
@@ -28,4 +28,6 @@ velocityComponentsDisplay=Velocity components
 zoomSliderLabel=Zoom [m * 10^]
 startButton=START
 reset=STOP
+errorMessageTitle = IO exception
+errorMessage = An exception with input and output occured.
 © 2021 GitHub, Inc.
