--- a/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
+++ b/ProjektPO/src/BundleLanguages/Bundle_en_US.properties
@@ -1,5 +1,6 @@
 new=New
 save=Save
+export=Export animation run record
 write=Write
 file=File
 manual=Manual
@@ -28,6 +29,3 @@ velocityComponentsDisplay=Velocity components
 zoomSliderLabel=Zoom [m * 10^]
 startButton=START
 reset=STOP
-errorMessageTitle = IO exception
-errorMessage = An exception with input and output occured.
-© 2021 GitHub, Inc.
