--- a/POProject/bin/BundleLanguages/Bundle_en_US.properties
+++ b/POProject/bin/BundleLanguages/Bundle_en_US.properties
@@ -1,7 +1,7 @@
 new=New
 save=Save
 export=Export animation run record
-write=Write
+read=Read
 file=File
 manual=Manual
 about=About
@@ -29,3 +29,9 @@ velocityComponentsDisplay=Velocity components
 zoomSliderLabel=Zoom [m * 10^]
 startButton=START
 reset=STOP
+errorMessageTitle = IO exception
+errorMessage = An exception with input and output occured.
+error =ERROR
+whatHappened = Incorrect data entered.
+thetaError = Angle is in the range from -90 to 270 degrees.
+notOrbital = This is not orbital motion.
